[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["text_clustering/**/*.py", "paper/*.py"]

[project]
name = "text-clustering-llm"
version = "1.8.0"
description = "Text Clustering as Classification with LLMs — PPD M2 MLSD"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Akram Chaabnia" },
  { name = "Abdelheq Mokhtari" },
  { name = "Mohamed Raouf Razi" },
]

[project.urls]
Repository = "https://github.com/AkramChaabnia/text-clustering-llm"
Documentation = "https://github.com/AkramChaabnia/text-clustering-llm/blob/develop/README.md"
"Original Paper" = "https://arxiv.org/abs/2410.00927"
"Original Code" = "https://github.com/ECNU-Text-Computing/Text-Clustering-via-LLM"
Issues = "https://github.com/AkramChaabnia/text-clustering-llm/issues"

dependencies = [
  # Baseline pipeline dependencies (core)
  "python-dotenv>=1.0.0",
  "tqdm>=4.66.0",
  "openai>=1.30.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=2.7.0",
  "umap-learn>=0.5.0",
]
viz = [
  "matplotlib>=3.8.0",
]
http = [
  "httpx>=0.27.0",
]
dev = [
  "ruff>=0.4.0",
  "commitizen>=3.27.0",
  "pre-commit>=3.7.0",
  "mypy>=1.8.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
]
# All extras for full development environment
all = [
  "text-clustering-llm[embeddings,viz,http,dev]",
]

[project.scripts]
tc-seed-labels    = "text_clustering.pipeline.seed_labels:main"
tc-label-gen      = "text_clustering.pipeline.label_generation:main_cli"
tc-classify       = "text_clustering.pipeline.classification:main_cli"
tc-evaluate       = "text_clustering.pipeline.evaluation:main_cli"
tc-preflight      = "tools.preflight:main"
tc-kmedoids       = "text_clustering.pipeline.kmedoids_preprocessing:main_cli"
tc-gmm            = "text_clustering.pipeline.gmm_preprocessing:main_cli"
tc-sealclust      = "text_clustering.pipeline.sealclust_pipeline:main_cli"
tc-sealclust-v3   = "text_clustering.pipeline.sealclust_v3_pipeline:main_cli"
tc-sealclust-v4   = "text_clustering.pipeline.sealclust_v4_pipeline:main_cli"
tc-visualize      = "text_clustering.visualization:main_cli"
tc-hybrid         = "text_clustering.pipeline.hybrid_pipeline:main_cli"
tc-baseline       = "text_clustering.pipeline.baseline_pipeline:main_cli"
tc-graphclust     = "text_clustering.pipeline.graphclust_pipeline:main_cli"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: release $current_version → $new_version [skip ci]"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Pipeline package: preserve original paper prompt strings (long lines, f-string style).
# Root shims are clean and need no per-file suppressions.
per-file-ignores = { "text_clustering/pipeline/label_generation.py" = ["E501", "F541"], "text_clustering/pipeline/classification.py" = ["E501", "F541"], "text_clustering/pipeline/evaluation.py" = ["E501", "E741"], "text_clustering/prompts.py" = ["E501", "F541"], "text_clustering/pipeline/hybrid_pipeline.py" = ["E501"], "text_clustering/pipeline/baseline_pipeline.py" = ["E501"], "text_clustering/pipeline/graphclust_pipeline.py" = ["E501"], "text_clustering/graphclust.py" = ["E501"], "text_clustering/sealclust_v3.py" = ["E501"], "text_clustering/pipeline/sealclust_v3_pipeline.py" = ["E501"], "text_clustering/sealclust_v4.py" = ["E501"], "text_clustering/pipeline/sealclust_v4_pipeline.py" = ["E501"] }
